<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PageR</string>
    <string name="menu_settings">Settings</string>
    <string name="label_key">Key:</string>
    <string name="label_recv">Receiver:</string>
    <string name="label_localuser">Your username:</string>
    <string name="label_sendmessage">Send a message</string>
    <string name="label_message">Message:</string>
    <string name="label_send">Send</string>

</resources>